# PAKCPP

./: .gitignore  CMakeLists.txt  ConsoleApplication3.sln  ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  LICENSE  README.md  build-clang.bat  build-gcc.bat  build.bat  cmake clean.bat
lib/: zopfli.lib  zstd.lib  zstd_static.lib
lib/zopfli/: CMakeLists.txt
otherlib/: libzopfli.lib
src/: ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters  main.cpp
src/utils/: compress.cpp  compress.h  compress.hpp  filestruct.h  filestruct.hpp  filesys.cpp  filesys.h  filesys.hpp  filesystem.cpp  filesystem.h
test/: pi2.txt
ww/: 1redmoon_ewt2 - Copy.dds
zlib-1.3.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  example.vcxproj  example.vcxproj.filters  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.sln  zlib.vcxproj  zlib.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
zlib-ng/include/: zconf.h
zlib-ng/lib/: zlib.lib  zlibstatic.lib
zlib-ng/lib/pkgconfig/: zlib.pc
zopfli/: CMakeLists.txt  Makefile
zopfli-master/: README
zopfli-master/src/zopfli/: deflate.c  lz77.c  lz77.h  util.h
zopfli-master/src/zopflipng/: zopflipng_bin.cc  zopflipng_lib.cc  zopflipng_lib.h
zopfli/sln/: sln.vcxproj  sln.vcxproj.filters
zopfli/src/zopfli/: defines.h  lz77.c  squeeze.c  util.c  util.h  zopfli_bin.c
zstd/zlibWrapper/: zstd.h  zstd_zlibwrapper.c
zstd/zlibWrapper/examples/: example.c
(+8 files in other folders)
